--- a/web/templates/_base.html
+++ b/web/templates/_base.html
@@ -29,12 +29,12 @@
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Dashboard</a></li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('genereer_xml') }}">
-                            <i class="bi bi-file-earmark-spreadsheet"></i> Excel Workflow
+                            Excel XMLator
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('genereer_xml_json') }}">
-                            <i class="bi bi-filetype-json"></i> JSON Workflow
+                            JSON XMLator
                         </a>
                     </li>
                 </ul>
@@ -45,6 +45,7 @@
                         <i class="bi bi-circle-half"></i>
                     </button>
                     <a href="/instellingen" class="btn btn-sm btn-outline-light ms-3">Instellingen</a>
+                    <a href="/faq" class="btn btn-sm btn-outline-light ms-2">FAQ</a>
                 </div>
             </div>
         </div>
